card pendaftaran fixed

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
       .card-c {
         position: relative;
         top: 2em;
-        width: 12.5em;
+        width: 14em;
         height: 6.5em;
         background: white;
         transition: .4s ease-in-out;
@@ -419,6 +419,14 @@
         overflow: hidden;
       }
 
+            .details {
+        position: relative;
+        color: black;
+        font-size: 0.6em;
+        padding-top: 1.5em;
+        padding-left: 2em;
+        transition: .4s ease-in-out;
+      }
       .heading {
         position: relative;
         color: black;
@@ -429,24 +437,14 @@
         transition: .4s ease-in-out;
       }
 
-      .details {
-        position: relative;
-        color: black;
-        font-size: 0.6em;
-        padding-top: 1.5em;
-        padding-left: 2em;
-        transition: .4s ease-in-out;
-      }
-
       .price {
         position: relative;
         color: black;
-        font-weight: bold;
         font-size: 0.8em;
         padding-top: 1.5em;
-        padding-left: 1.5em;
         top: 9.6em;
-        left: 5em;
+        padding: 0 10px;
+        text-align: justify;
         transition: .4s ease-in-out;
       }
 
@@ -485,8 +483,8 @@
         padding-top: 0.8em;
         padding-bottom: 0.85em;
         border-radius: 10px;
-        left: 2.6em;
-        top: 15.5em;
+        left: 3.6em;
+        top: 13.5em;
         transition: .4s ease-in-out;
         font-weight: bold;
       }
@@ -506,8 +504,8 @@
       }
 
       .card-c:hover {
-        width: 12.5em; /* 200px */
-        height: 21.7em; /* 350px */
+        width: 13.5em; /* 200px */
+        height: 22.7em; /* 350px */
         transform: translateY(1.25em);
       }
 
@@ -515,16 +513,16 @@
         transform: rotateX(360deg);
         height: 100px;
         width: 100px;
-        left: 0em;
+        left: 0.3em;
         top: -17.5em;
       }
 
       .card-c:hover .heading {
-        transform: translateY(7em) translateX(3em);
+        transform: translateY(7em) translateX(3.5em);
       }
 
       .card-c:hover .details {
-        transform: translateY(13em) translateX(3.1em);
+        transform: translateY(11em) translateX(6em);
       }
     </style>
     <section style="background-color: #f8f8f8;">
@@ -536,13 +534,14 @@
             <p>Jalur pendaftaraan dst gtu isinya</p>
           </div>
         </div>
-        <div class="row" style="width: 100%; min-height: 400px;">
+        <div class="row" style="width: 100%; min-height: 500px;">
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <div class="card-c">
               <div class="heading">PMDK</div>
-              <div class="details">Lorem ipsum dolor sit amet</div>
-              <div class="price">$299</div>
+              <div class="details">(orang dalam)</div>
+              <div class="price">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP TM sendiri merupakan kepanjangan
+              dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
               <button class="btn2">Add to Cart</button>
             </div>
             <div class="glasses">
@@ -552,9 +551,10 @@
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <div class="card-c">
-              <div class="heading">PMDK</div>
-              <div class="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
-              <div class="price">$299</div>
+              <div class="heading">SMPTM</div>
+              <div class="details">(orang dalam)</div>
+              <div class="price">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP TM sendiri
+                merupakan kepanjangan dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
               <button class="btn2">Add to Cart</button>
             </div>
             <div class="glasses">
