--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         overflow: hidden;
       }
 
-            .details {
+      .details {
         position: relative;
         color: black;
         font-size: 0.6em;
@@ -427,6 +427,7 @@
         padding-left: 2em;
         transition: .4s ease-in-out;
       }
+
       .heading {
         position: relative;
         color: black;
@@ -504,8 +505,10 @@
       }
 
       .card-c:hover {
-        width: 13.5em; /* 200px */
-        height: 22.7em; /* 350px */
+        width: 13.5em;
+        /* 200px */
+        height: 22.7em;
+        /* 350px */
         transform: translateY(1.25em);
       }
 
@@ -540,8 +543,9 @@
             <div class="card-c">
               <div class="heading">PMDK</div>
               <div class="details">(orang dalam)</div>
-              <div class="price">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP TM sendiri merupakan kepanjangan
-              dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
+              <div class="price">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP
+                TM sendiri merupakan kepanjangan
+                dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
               <button class="btn2">Add to Cart</button>
             </div>
             <div class="glasses">
@@ -553,7 +557,8 @@
             <div class="card-c">
               <div class="heading">SMPTM</div>
               <div class="details">(orang dalam)</div>
-              <div class="price">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP TM sendiri
+              <div class="price">SMP TM merupakan seleksi masuk perguruan tinggi di universitas muhammadiyah jember. SMP
+                TM sendiri
                 merupakan kepanjangan dari Seleksi Masuk Perguruan Tinggi Muhammadiyah.</div>
               <button class="btn2">Add to Cart</button>
             </div>
@@ -564,9 +569,76 @@
         </div>
       </div>
     </section>
+    <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg"
+      class="transition duration-300 ease-in-out delay-150">
+      <path
+        d="M 0,400 C 0,400 0,100 0,100 C 24.944825676614613,87.33536466133806 49.889651353229226,74.67072932267612 94,68 C 138.11034864677077,61.32927067732388 201.38622026369768,60.65244737063358 238,66 C 274.6137797363023,71.34755262936642 284.56546759198005,82.7194811947896 312,99 C 339.43453240801995,115.2805188052104 384.35190936838217,136.46962785020804 429,137 C 473.64809063161783,137.53037214979196 518.0268949344912,117.4020074043783 562,100 C 605.9731050655088,82.5979925956217 649.5405108936529,67.92234253227883 685,68 C 720.4594891063471,68.07765746772117 747.8110614908967,82.90862246650637 779,87 C 810.1889385091033,91.09137753349363 845.2152431427604,84.44316760169573 879,78 C 912.7847568572396,71.55683239830427 945.3279659380612,65.31870712671069 982,67 C 1018.6720340619388,68.68129287328931 1059.4728931049947,78.28200389146149 1100,93 C 1140.5271068950053,107.71799610853851 1180.78046164196,127.5532773074433 1223,129 C 1265.21953835804,130.4467226925567 1309.4052603271646,113.50488687876526 1346,109 C 1382.5947396728354,104.49511312123474 1411.5984970493814,112.42717517749564 1426,113 C 1440.4015029506186,113.57282482250436 1440.2007514753093,106.78641241125217 1440,100 C 1440,100 1440,400 1440,400 Z"
+        stroke="none" stroke-width="0" fill="#0d47a1" fill-opacity="0.4"
+        class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
+      <path
+        d="M 0,400 C 0,400 0,200 0,200 C 33.52775551734378,184.29346120550278 67.05551103468756,168.58692241100556 105,163 C 142.94448896531244,157.41307758899444 185.30571137859357,161.9457715614806 218,175 C 250.69428862140643,188.0542284385194 273.72164345093796,209.62999134307205 314,204 C 354.27835654906204,198.37000865692795 411.80771481765476,165.53426306623126 449,170 C 486.19228518234524,174.46573693376874 503.0474972784433,216.23295639200282 536,229 C 568.9525027215567,241.76704360799718 618.0022960685718,225.5339113657575 658,223 C 697.9977039314282,220.4660886342425 728.9433184472691,231.63139814496736 768,223 C 807.0566815527309,214.36860185503264 854.2244301423519,185.94049605437306 889,187 C 923.7755698576481,188.05950394562694 946.1589609833225,218.60661763754032 976,219 C 1005.8410390166775,219.39338236245968 1043.1397259243583,189.6330333954657 1088,176 C 1132.8602740756417,162.3669666045343 1185.2821353192444,164.86124878059684 1227,177 C 1268.7178646807556,189.13875121940316 1299.731732798665,210.921971482147 1337,217 C 1374.268267201335,223.078028517853 1417.7909334860958,213.45086529081516 1436,208 C 1454.2090665139042,202.54913470918484 1447.104533256952,201.27456735459242 1440,200 C 1440,200 1440,400 1440,400 Z"
+        stroke="none" stroke-width="0" fill="#0d47a1" fill-opacity="0.53"
+        class="transition-all duration-300 ease-in-out delay-150 path-1"></path>
+      <path
+        d="M 0,400 C 0,400 0,300 0,300 C 48.02112900893914,298.8455253438959 96.04225801787828,297.69105068779174 131,304 C 165.95774198212172,310.30894931220826 187.85209693742604,324.08132259272884 219,319 C 250.14790306257396,313.91867740727116 290.54935423241744,289.983658941293 334,288 C 377.45064576758256,286.016341058707 423.95048613290413,305.98404164209916 455,305 C 486.04951386709587,304.01595835790084 501.6487012359662,282.08017449031024 536,272 C 570.3512987640338,261.91982550968976 623.454708923231,263.6952603966598 662,265 C 700.545291076769,266.3047396033402 724.5324630711096,267.13878392305054 765,275 C 805.4675369288904,282.86121607694946 862.4154387923304,297.7496039111382 900,296 C 937.5845612076696,294.2503960888618 955.8057817595682,275.86280043239674 992,275 C 1028.1942182404318,274.13719956760326 1082.3614341693974,290.79919435927485 1123,305 C 1163.6385658306026,319.20080564072515 1190.748481562842,330.94042213050363 1222,330 C 1253.251518437158,329.05957786949637 1288.6446395792348,315.43911711871056 1329,308 C 1369.3553604207652,300.56088288128944 1414.6729601202187,299.30310939465414 1434,299 C 1453.3270398797813,298.69689060534586 1446.6635199398906,299.3484453026729 1440,300 C 1440,300 1440,400 1440,400 Z"
+        stroke="none" stroke-width="0" fill="#0d47a1" fill-opacity="1"
+        class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
+    </svg>
   </main>
-  <footer>
-
+  <!-- foter -->
+  <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
+    <div class="container-fluid">
+      <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
+        <div class="col-md-4">
+          <h3>Sekertaiat HMD TE</h3>
+          <style>
+            .icon {
+              display: flex;
+              align-items: center;
+            }
+            .icon i {
+              margin-right: 15px;
+            }
+            .alamat i {
+              margin-right: 20px;
+            }
+            .sosmed {
+              margin: 20px 0;
+            }
+            .sosmed a {
+              
+              color: #f8f8f8;
+              border-radius: 50%;
+              background-color: #033E50;
+              padding: 10px 13px 10px 13px;
+            }
+          </style>
+          <div class="alamat icon">
+            <i class="fas fa-map-marker-alt"></i><p>Jl. Raya Bandung Sumedang KM. 21 Jatinangor</p>
+          </div>
+          <!-- email -->
+          <div class="email icon">
+            <i class="fas fa-envelope"></i><p>ini.email@gmail.com</p>
+          </div>
+          <!-- telp -->
+          <div class="telp icon">
+            <i class="fas fa-phone-alt"></i><p>08123456789</p>
+          </div>
+          <!-- sosmed -->
+          <div class="sosmed">
+            <a href="https://www.instagram.com/hmdteunpad/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/hmdteunpad/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/hmdteunpad" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/channel/UC9Z3Z4ZvX2nX2Z8QZ3Z4ZvX2nX2Z8Q" target="_blank"><i
+                class="fab fa-youtube"></i></a>
+          </div>
+          </div>
+          <div class="col-md-4">
+            <!-- copyright -->
+            <p style="text-align: end;">&copy creator 2023</p>
+          </div>
+        </div>
+      </div>
   </footer>
   <script src="slider.js"></script>
   <script src="script.js"></script>
