--- a/profil.html
+++ b/profil.html
@@ -65,7 +65,7 @@
     <section class="about" style="background-color: #f8f8f8 !important;">
       <div class="container" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
         <div class="col-12">
-
+          <img src="" alt="">
         </div>
       </div>
     </section>
@@ -84,58 +84,20 @@
         stroke="none" stroke-width="0" fill="#0d47a1" fill-opacity="1"
         class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
     </svg>
+    <!-- deskripsi -->
     <section style="background-color: #0d47a1; margin-top: -20px;">
       <div class="container"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="row">
-          <h2 style="color: #fff; padding: 10px;">Kenapa Harus Teknik Informatika Universitas Muhammadiyah Jember?</h2>
+          <h2 style="color: #fff; padding: 10px;">Teknik Informatika Universitas Muhammadiyah Jember</h2>
         </div>
         <div class="row">
-          <div class="col-md-3" style="padding: 30px;">
-            <!-- card -->
-            <div class="card inner">
-              <div class="overlay"></div>
-              <div class="circle">
-                <i class="fa-solid fa-computer f-icon"></i>
-              </div>
-              <p>Fasilitas yang lengkap</p>
-            </div>
-            <!-- end -->
+          <div class="col-md-6" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+            <img src="" alt="">
           </div>
-          <div class="col-md-3" style="padding: 30px;">
-            <!-- card -->
-            <div class="card inner">
-              <div class="overlay"></div>
-              <div class="circle">
-                <i class="fa-solid fa-school f-icon"></i>
-              </div>
-              <p>Lingkungan yang nyaman</p>
-            </div>
-            <!-- end -->
+          <div class="col-md-6" style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores iste officia magni, a excepturi minima facilis, doloribus deleniti blanditiis reprehenderit quisquam nostrum vero! Facere accusamus dolorum in voluptatem eveniet sequi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi dolore facilis mollitia delectus, excepturi totam nobis unde sit consectetur numquam reiciendis, voluptas temporibus laudantium explicabo repellat, molestiae incidunt! Illo, quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptatum blanditiis minima molestiae ducimus natus omnis autem alias facilis nobis provident doloribus suscipit aspernatur tempore beatae a rerum. Nobis, voluptas.</p>
           </div>
-          <div class="col-md-3" style="padding: 30px;">
-            <!-- card -->
-            <div class="card inner">
-              <div class="overlay"></div>
-              <div class="circle">
-                <i class="fa-solid fa-chalkboard-user f-icon"></i>
-              </div>
-              <p>Pengajar yang berkometen</p>
-            </div>
-            <!-- end -->
-          </div>
-          <div class="col-md-3" style="padding: 30px;">
-            <!-- card -->
-            <div class="card inner">
-              <div class="overlay"></div>
-              <div class="circle">
-                <i class="fa-solid fa-chalkboard-user f-icon"></i>
-              </div>
-              <p>Pengajar yang berkometen</p>
-            </div>
-            <!-- end -->
-          </div>
-        </div>
       </div>
     </section>
     <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 490" xmlns="http://www.w3.org/2000/svg"
@@ -158,109 +120,6 @@
     <section style="background-color: #f8f8f8;">
       <div class="container"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row">
-          <h2 style="color: #0d47a1; padding: 10px;">Bahasa Pemrograman yang dipelajari</h2>
-        </div>
-        <div class="blobs-container">
-          <!-- blob -->
-          <div class="blob">
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0F62FE" id="bpath"
-                d="M41.2,-46.2C56.7,-36,74.8,-26.2,77.8,-13.2C80.8,-0.1,68.6,16.2,56.5,28.3C44.4,40.4,32.4,48.3,18.5,55.3C4.6,62.3,-11.3,68.4,-23.9,64.4C-36.6,60.4,-46.1,46.2,-50.3,32.3C-54.5,18.3,-53.4,4.5,-53,-11.4C-52.7,-27.3,-52.9,-45.4,-44.2,-56.7C-35.5,-68,-17.7,-72.6,-2.5,-69.7C12.8,-66.7,25.7,-56.3,41.2,-46.2Z"
-                transform="translate(100 100)" />
-            </svg>
-            <div class="blob-content">
-              <span class="number">1</span>
-              <span class="language">JavaScript</span>
-            </div>
-          </div>
-          <!-- blob -->
-          <div class="blob">
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0F62FE" id="bpath2"
-                d="M38.3,-39.2C53.3,-33.1,71.6,-24.5,78.1,-10.4C84.6,3.7,79.3,23.2,69,38.8C58.7,54.3,43.5,66,26.8,71C10,76,-8.2,74.3,-24,67.8C-39.8,61.2,-53.3,49.9,-58.9,36C-64.5,22.1,-62.3,5.8,-57.3,-7.9C-52.2,-21.5,-44.3,-32.4,-34.2,-39.4C-24.2,-46.5,-12.1,-49.7,-0.2,-49.4C11.6,-49.2,23.3,-45.4,38.3,-39.2Z"
-                transform="translate(100 100)" />
-            </svg>
-            <div class="blob-content">
-              <span class="number">1</span>
-              <span class="language">JavaScript</span>
-            </div>
-          </div>
-          <!-- blob -->
-          <div class="blob">
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0F62FE" id="bpath3"
-                d="M51.9,-69.3C66.3,-61,76.3,-44.5,75.7,-28.7C75.2,-12.9,64.2,2.2,57,16.8C49.9,31.5,46.7,45.7,37.9,51.9C29,58.1,14.5,56.3,-0.4,56.8C-15.3,57.4,-30.6,60.2,-45.1,55.9C-59.6,51.5,-73.4,39.9,-75.6,26.2C-77.8,12.5,-68.5,-3.3,-61.6,-18.6C-54.7,-33.9,-50.4,-48.7,-40.6,-58.5C-30.7,-68.3,-15.4,-73.1,1.7,-75.5C18.8,-77.8,37.5,-77.6,51.9,-69.3Z"
-                transform="translate(100 100)" />
-            </svg>
-            <div class="blob-content">
-              <span class="number">1</span>
-              <span class="language">JavaScript</span>
-            </div>
-          </div>
-          <!-- blob -->
-          <div class="blob">
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0F62FE" id="bpath4"
-                d="M37,-53.1C45.3,-44.8,47.7,-30.5,53,-16.6C58.3,-2.8,66.5,10.8,66.3,24.7C66.1,38.6,57.5,52.9,45,63.4C32.6,73.8,16.3,80.3,2.2,77.3C-12,74.3,-23.9,61.9,-34.3,50.8C-44.7,39.7,-53.5,30,-55.8,19.1C-58,8.2,-53.6,-3.9,-47.5,-13.2C-41.4,-22.5,-33.7,-29.1,-25.5,-37.4C-17.3,-45.7,-8.6,-55.8,2.8,-59.7C14.3,-63.6,28.6,-61.3,37,-53.1Z"
-                transform="translate(100 100)" />
-            </svg>
-            <div class="blob-content">
-              <span class="number">1</span>
-              <span class="language">JavaScript</span>
-            </div>
-          </div>
-        </div>
-        <div class="blobs-container">
-          <!-- blob -->
-          <div class="blob">
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0F62FE" id="bpath5"
-                d="M41.2,-46.2C56.7,-36,74.8,-26.2,77.8,-13.2C80.8,-0.1,68.6,16.2,56.5,28.3C44.4,40.4,32.4,48.3,18.5,55.3C4.6,62.3,-11.3,68.4,-23.9,64.4C-36.6,60.4,-46.1,46.2,-50.3,32.3C-54.5,18.3,-53.4,4.5,-53,-11.4C-52.7,-27.3,-52.9,-45.4,-44.2,-56.7C-35.5,-68,-17.7,-72.6,-2.5,-69.7C12.8,-66.7,25.7,-56.3,41.2,-46.2Z"
-                transform="translate(100 100)" />
-            </svg>
-            <div class="blob-content">
-              <span class="number">1</span>
-              <span class="language">JavaScript</span>
-            </div>
-          </div>
-          <!-- blob -->
-          <div class="blob">
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0F62FE" id="bpath6"
-                d="M38.3,-39.2C53.3,-33.1,71.6,-24.5,78.1,-10.4C84.6,3.7,79.3,23.2,69,38.8C58.7,54.3,43.5,66,26.8,71C10,76,-8.2,74.3,-24,67.8C-39.8,61.2,-53.3,49.9,-58.9,36C-64.5,22.1,-62.3,5.8,-57.3,-7.9C-52.2,-21.5,-44.3,-32.4,-34.2,-39.4C-24.2,-46.5,-12.1,-49.7,-0.2,-49.4C11.6,-49.2,23.3,-45.4,38.3,-39.2Z"
-                transform="translate(100 100)" />
-            </svg>
-            <div class="blob-content">
-              <span class="number">1</span>
-              <span class="language">JavaScript</span>
-            </div>
-          </div>
-          <!-- blob -->
-          <div class="blob">
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0F62FE" id="bpath7"
-                d="M51.9,-69.3C66.3,-61,76.3,-44.5,75.7,-28.7C75.2,-12.9,64.2,2.2,57,16.8C49.9,31.5,46.7,45.7,37.9,51.9C29,58.1,14.5,56.3,-0.4,56.8C-15.3,57.4,-30.6,60.2,-45.1,55.9C-59.6,51.5,-73.4,39.9,-75.6,26.2C-77.8,12.5,-68.5,-3.3,-61.6,-18.6C-54.7,-33.9,-50.4,-48.7,-40.6,-58.5C-30.7,-68.3,-15.4,-73.1,1.7,-75.5C18.8,-77.8,37.5,-77.6,51.9,-69.3Z"
-                transform="translate(100 100)" />
-            </svg>
-            <div class="blob-content">
-              <span class="number">1</span>
-              <span class="language">JavaScript</span>
-            </div>
-          </div>
-          <!-- blob -->
-          <div class="blob">
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0F62FE" id="bpath8"
-                d="M37,-53.1C45.3,-44.8,47.7,-30.5,53,-16.6C58.3,-2.8,66.5,10.8,66.3,24.7C66.1,38.6,57.5,52.9,45,63.4C32.6,73.8,16.3,80.3,2.2,77.3C-12,74.3,-23.9,61.9,-34.3,50.8C-44.7,39.7,-53.5,30,-55.8,19.1C-58,8.2,-53.6,-3.9,-47.5,-13.2C-41.4,-22.5,-33.7,-29.1,-25.5,-37.4C-17.3,-45.7,-8.6,-55.8,2.8,-59.7C14.3,-63.6,28.6,-61.3,37,-53.1Z"
-                transform="translate(100 100)" />
-            </svg>
-            <div class="blob-content">
-              <span class="number">1</span>
-              <span class="language">JavaScript</span>
-            </div>
-          </div>
-        </div>
       </div>
     </section>
     <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg"
@@ -584,7 +443,6 @@
       </div>
     </div>
   </footer>
-  <script src="slider.js"></script>
   <script src="script.js"></script>
 
 </body>
